se realizan primeras pruebas exitosas, se agrega filter y se solucionan problemas de importaciones